--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -1,15 +1,33 @@
 /* esto se pone contol K - control c */
 
+*{
+  margin:0;
+  padding:0;
+  box-sizing: border-box;
+}
+
+#contenedor{
+  display:grid;
+  grid-template-columns: 100%;
+
+  @media only screen and (min: width 1024px;){
+    flex-wrap:nowrap;
+    margin-left:auto;
+    margin-right:auto;
+  }
+
+}
+
 body{
   margin:0;
   background-color: #111;
   font-family: serif;
   color: white;
-  -ms-flex-align: center;
+  -ms-flex-align:end;
  
 }
 header{
-  display: flex;
+  display:flex;
   height: 80px;
   background-color: #111;
   justify-content: space-between;  
@@ -21,7 +39,7 @@ header{
     
 }
 .logo img{
-  height: 100px;
+  height: 80px;
   margin-right: 140px;
 }
 
@@ -30,31 +48,95 @@ img {
   padding-top: 0;
  
 }
+.container-boton{
+  background-color: #2e6329;
+  border: 2px solid #fff;
+  position:absolute;
+  z-index: 999;
+  border-radius: 50%;
+  bottom: 450px;
+  right: 25px;
+  padding: 15px;
+  transition: ease 0.3s;
+  animation: efecto 1.2s infinite;
+}
+
+.container-boton:hover{
+  transform: scale(1.1);
+  transition: 0.3s;
+}
+
+.boton{
+  width: 25px;
+  transition: ease 1s;
+}
 
 
-  footer{
+@keyframes efecto{
+  0%{
+      box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.85);
+  }
+  100%{
+      box-shadow: 0 0 0 45px rgba(0, 0, 0, 0);
+  }
+}
+
+@media only screen and (min-width:320px) and (max-width:768px){
+  .btn-wsp{
+      width:63px;
+      height:63px;
+      line-height: 66px;
+}
+}
+
+
+  #footer{
+    grid-area:auto;
+    margin-top: 0;
     background-color: #333;
+    height: auto;
+    text-align:justify;
+    
+    
   }
 
   
 /* SECCION OFICINA */
 
-div.oficina {
-  margin-top: 0;
-  margin-right: 0;
-  margin-left: 20px;
-  margin-bottom: 20px;
-  border: 2px solid;
-  width: 400px;
-  height: 300px;
-  float: left;
+#oficina{
+  display: flex;
 }
 
-div.oficina img {
+.oficina_1 {
+  display: flexbox;
+  width:50%;
+  flex-direction: column;
+  align-items: center;
   position: center;
-  width: 100%;
-  height: 250px;
+  width: 50%;
+  height: 50%;
 }
+
+.oficina_2 {
+  display: flexbox;
+  width:50%;
+  flex-direction: column;
+  align-items: center;
+  position: center;
+  height: 50%;
+}
+
+.oficina_3 {
+  display: flexbox;
+  width:50%;
+  flex-direction: column;
+  align-items: center;
+  position: center;
+  width: 50%;
+   height: 50%;
+}
+
+
 
 
 /* SECCION Proyectos */
